# riot

lib/: .flake8  LICENSE  README.md  buildspec.yml  pyproject.toml
lib/riot/: __init__.py  connection.py
lib/riot/api/: account.py
lib/riot/api/lol/: league.py  spectator.py  summoner.py
lib/riot/api/tft/: league.py
lib/riot/constants/: __init__.py  champions.py  game_mods.py  game_types.py  regions.py  service_proxies.py
lib/samples/: examples.py
lib/scripts/: update.py
