[tool.black]
line-length = 80
target-version = ["py311"]
include = '\.pyi?$'

[tool.vulture]
ignore_names = ["context", "*_mock"]
make_whitelist = true
min_confidence = 80
paths = ["riot", "tests"]
sort_by_size = true

[tool.bandit.assert_used]
skips = ['*_test.py', '*test_*.py']

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python_riot"
version = "0.4.0"
authors = [{ name = "Johannes Eimer", email = "info@jep-dev.com" }]
description = "Inoffical python lib for the Riot API written in python"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ['Riot', 'League of Legends', 'API', 'Python']
dependencies = []

[tool.hatch.build.targets.sdist]
include = ["riot"]

[tool.hatch.build.targets.wheel]
packages = ["riot"]
